--- a/src/assets/styles/productDescription.css
+++ b/src/assets/styles/productDescription.css
@@ -123,6 +123,68 @@
           box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
+#product-review-container {
+  background: #fff;
+  margin: 30px;
+  border-radius: 10px;
+  padding: 20px 30px;
+  -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+#product-review-container #customer-review-heading {
+  padding: 20px 0;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  letter-spacing: 0.2rem;
+  color: #4774c8;
+}
+
+#product-review-container #review-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#product-review-container #review-container #no-reviews {
+  font-size: 1.2rem;
+  font-weight: bolder;
+  letter-spacing: 0.2rem;
+}
+
+#product-review-container #review-container #review-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#product-review-container #review-container #review-item #review-user,
+#product-review-container #review-container #review-item #review-content {
+  font-weight: bolder;
+  padding: 20px 0;
+  text-align: justify;
+  letter-spacing: 0.1rem;
+}
+
+#product-review-container #review-container #review-item #review-user {
+  width: 20%;
+  font-size: 1.1rem;
+  color: #c84771;
+}
+
+#product-review-container #review-container #review-item #review-content {
+  width: 80%;
+  font-size: 1rem;
+  color: #4774c8;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (min-width: 320px) and (max-width: 479px) {
   #product-description-container {
@@ -194,6 +256,41 @@
     font-size: 0.5rem;
     border-radius: 2px;
     letter-spacing: 0.1rem;
+  }
+  #product-review-container {
+    margin: 20px;
+    border-radius: 10px;
+    padding: 20px;
+  }
+  #product-review-container #customer-review-heading {
+    padding: 10px 0;
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+  }
+  #product-review-container #review-container #no-reviews {
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+  }
+  #product-review-container #review-container #review-item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 10px 0;
+  }
+  #product-review-container #review-container #review-item #review-user,
+  #product-review-container #review-container #review-item #review-content {
+    letter-spacing: 0.1rem;
+  }
+  #product-review-container #review-container #review-item #review-user {
+    padding: 5px 0;
+    width: 100%;
+    font-size: 0.7rem;
+  }
+  #product-review-container #review-container #review-item #review-content {
+    padding: 0;
+    width: 100%;
+    font-size: 0.6rem;
   }
 }
 
@@ -267,6 +364,41 @@
     font-size: 0.7rem;
     border-radius: 5px;
     letter-spacing: 0.1rem;
+  }
+  #product-review-container {
+    margin: 25px;
+    border-radius: 10px;
+    padding: 20px;
+  }
+  #product-review-container #customer-review-heading {
+    padding: 10px 0;
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+  }
+  #product-review-container #review-container #no-reviews {
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+  }
+  #product-review-container #review-container #review-item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 10px 0;
+  }
+  #product-review-container #review-container #review-item #review-user,
+  #product-review-container #review-container #review-item #review-content {
+    letter-spacing: 0.2rem;
+  }
+  #product-review-container #review-container #review-item #review-user {
+    padding: 10px 0;
+    width: 100%;
+    font-size: 0.9rem;
+  }
+  #product-review-container #review-container #review-item #review-content {
+    padding: 0;
+    width: 100%;
+    font-size: 0.7rem;
   }
 }
 
@@ -342,6 +474,41 @@
     border-radius: 5px;
     letter-spacing: 0.1rem;
   }
+  #product-review-container {
+    margin: 25px;
+    border-radius: 10px;
+    padding: 20px;
+  }
+  #product-review-container #customer-review-heading {
+    padding: 10px 0;
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+  }
+  #product-review-container #review-container #no-reviews {
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+  }
+  #product-review-container #review-container #review-item {
+    padding: 10px 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #product-review-container #review-container #review-item #review-user,
+  #product-review-container #review-container #review-item #review-content {
+    letter-spacing: 0.2rem;
+  }
+  #product-review-container #review-container #review-item #review-user {
+    padding: 10px 0;
+    width: 100%;
+    font-size: 0.9rem;
+  }
+  #product-review-container #review-container #review-item #review-content {
+    padding: 0;
+    width: 100%;
+    font-size: 0.8rem;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -414,6 +581,37 @@
     font-size: 1rem;
     border-radius: 7px;
     letter-spacing: 0.2rem;
+  }
+  #product-review-container {
+    margin: 25px;
+    border-radius: 10px;
+    padding: 20px;
+  }
+  #product-review-container #customer-review-heading {
+    padding: 10px 0;
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+  }
+  #product-review-container #review-container #no-reviews {
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+  }
+  #product-review-container #review-container #review-item {
+    padding: 10px 0;
+  }
+  #product-review-container #review-container #review-item #review-user,
+  #product-review-container #review-container #review-item #review-content {
+    letter-spacing: 0.2rem;
+  }
+  #product-review-container #review-container #review-item #review-user {
+    padding: 10px 0;
+    width: 30%;
+    font-size: 0.9rem;
+  }
+  #product-review-container #review-container #review-item #review-content {
+    padding: 10px 0;
+    width: 70%;
+    font-size: 0.8rem;
   }
 }
 
